# musicus

./: .gitignore  Cargo.toml  HACKING.md  README.md  de.johrpan.Musicus.Devel.json  de.johrpan.musicus.json  meson.build  meson_options.txt
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  library.rs  logger.rs  player.rs  secure.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  library.rs  logger.rs  player.rs
crates/musicus/: .gitignore  Cargo.toml
crates/musicus/data/: de.johrpan.musicus.gschema.xml
crates/musicus/res/: musicus.gresource.xml
crates/musicus/src/: config.rs  main.rs  meson.build  resources.rs  window.rs
crates/musicus_backend/: Cargo.toml
crates/musicus_backend/src/: error.rs  lib.rs  library.rs  player.rs  secure.rs
data/: de.johrpan.Musicus.desktop.in.in  de.johrpan.Musicus.gschema.xml.in  de.johrpan.Musicus.service.in  de.johrpan.musicus.appdata.xml.in  de.johrpan.musicus.desktop.in  de.johrpan.musicus.gschema.xml  meson.build
data/icons/: meson.build
data/res/: de.johrpan.Musicus.gresource.xml.in  home_page.blp  meson.build  musicus.gresource.xml  playlist_page.blp  style.css  tile.blp  welcome_page.blp  window.blp
data/ui/: album_editor.blp  album_page.blp  album_tile.blp  empty_page.blp  ensemble_editor.blp  ensemble_selector_popover.blp  error_dialog.blp  home_page.blp  instrument_editor.blp  instrument_selector_popover.blp  library_manager.blp  library_manager_albums_page.blp  person_editor.blp  player_bar.blp  playlist_page.blp  playlist_tile.blp  preferences_dialog.blp  process_row.blp  program_tile.blp  recording_editor.blp  recording_editor_performer_row.blp  recording_selector_popover.blp  recording_tile.blp  role_editor.blp  search_entry.blp  search_page.blp  search_tag.blp  slider_row.blp  tag_tile.blp  tile.blp  tracks_editor.blp  tracks_editor_parts_popover.blp  tracks_editor_track_row.blp  translation_editor.blp  translation_entry.blp  translation_section.blp  welcome_page.blp  window.blp  work_editor.blp  work_editor_composer_row.blp
data/ui/editor/: album.blp  ensemble.blp  instrument.blp  person.blp  program.blp  recording.blp  role.blp  tracks.blp  work.blp
data/ui/selector/: performer_role.blp  (+3 more)
database/: Cargo.toml
database/src/: ensembles.rs  error.rs  instruments.rs  lib.rs  medium.rs  persons.rs  recordings.rs  schema.rs  thread.rs  works.rs
import/: Cargo.toml
import/src/: disc.rs  error.rs  folder.rs  lib.rs  session.rs
musicus/: .gitignore  Cargo.toml  README.md  de.johrpan.musicus.json
musicus/data/: de.johrpan.musicus.gschema.xml
musicus/po/: POTFILES.in  de.po  musicus.pot
musicus/res/: musicus.gresource.xml
musicus/src/: config.rs  macros.rs  main.rs  meson.build  player.rs  preferences.rs  resources.rs  ripper.rs  window.rs
musicus_server/: .gitignore  Cargo.toml  README.md
musicus_server/src/: error.rs  main.rs
src/: album_page.rs  album_tile.rs  application.rs  backend.rs  config.rs  config.rs.in  empty_page.rs  home_page.rs  library.rs  library_manager.rs  macros.rs  main.rs  meson.build  musicus.gresource.xml  player.rs  player_bar.rs  playlist_item.rs  playlist_page.rs  playlist_tile.rs  preferences_dialog.rs  process.rs  process_manager.rs  process_row.rs  program.rs  program_tile.rs  recording_tile.rs  resources.rs.in  search_entry.rs  search_page.rs  search_tag.rs  slider_row.rs  tag_tile.rs  tile.rs  util.rs  welcome_page.rs  window.blp  window.rs  window.ui
src/backend/: backend.rs  error.rs  library.rs  mod.rs  player.rs  secure.rs
src/database/: database.rs  mod.rs  models.rs  recordings.rs  schema.rs  tables.rs
src/db/: ensembles.rs  error.rs  instruments.rs  medium.rs  mod.rs  models.rs  persons.rs  recordings.rs  schema.rs  tables.rs  works.rs
src/dialogs/: about.rs  ensemble_editor.rs  ensemble_selector.rs  instrument_editor.rs  instrument_selector.rs  login_dialog.rs  mod.rs  part_editor.rs  performance_editor.rs  person_editor.rs  person_selector.rs  preferences.rs  recording_editor.rs  recording_selector.rs  register.rs  section_editor.rs  selector_row.rs  server_dialog.rs  track_editor.rs  tracks_editor.rs  work_editor.rs  work_selector.rs
src/editor/: activatable_row.rs  album.rs  album_editor.rs  ensemble.rs  ensemble_editor.rs  ensemble_selector_popover.rs  instrument.rs  instrument_editor.rs  instrument_selector_popover.rs  mod.rs  performer_role_selector_popover.rs  person.rs  person_editor.rs  person_selector_popover.rs  program.rs  recording.rs  recording_editor.rs  recording_editor_ensemble_row.rs  recording_editor_performer_row.rs  recording_selector_popover.rs  role.rs  role_editor.rs  role_selector_popover.rs  tracks.rs  tracks_editor.rs  tracks_editor_parts_popover.rs  tracks_editor_track_row.rs  translation.rs  translation_editor.rs  translation_entry.rs  translation_section.rs  work.rs  work_editor.rs  work_editor_composer_row.rs  work_editor_part_row.rs  work_selector_popover.rs
src/editors/: ensemble.rs  instrument.rs  performance.rs  person.rs  recording.rs  work.rs  work_part.rs  work_section.rs
src/gtk/: help-overlay.blp
src/import/: disc_source.rs  folder_source.rs  medium_editor.rs  mod.rs  source.rs  source_selector.rs  track_editor.rs  track_selector.rs  track_set_editor.rs
src/library_manager/: albums_page.rs  mod.rs
src/navigator/: mod.rs  window.rs
src/preferences/: login.rs  mod.rs  register.rs
src/screens/: ensemble.rs  ensemble_screen.rs  mod.rs  person.rs  person_screen.rs  player_screen.rs  recording.rs  recording_screen.rs  work.rs  work_screen.rs
src/selector/: ensemble.rs  instrument.rs  mod.rs  performer_role.rs  person.rs  recording.rs  role.rs  work.rs
src/selectors/: ensemble.rs  instrument.rs  mod.rs  person.rs  recording.rs  selector.rs  work.rs
src/util/: activatable_row.rs  drag_widget.rs  error_dialog.rs
src/widgets/: button_row.rs  editor.rs  indexed_list_model.rs  list.rs  mod.rs  navigator.rs  navigator_window.rs  new_navigator.rs  new_navigator_window.rs  person_list.rs  player_bar.rs  poe_list.rs  screen.rs  section.rs  selector_row.rs  stack.rs  upload_section.rs
(+394 files in other folders)
