[package]
name = "musicus"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.5", features = ["v1_4"] }
chrono = "0.4"
fragile = "2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gstreamer-player = "0.21"
gtk = { package = "gtk4", version = "0.7", features = ["v4_12", "blueprint"] }
log = "0.4"
once_cell = "1"
rand = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
thiserror = "1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }