[package]
name = "musicus"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_7"] }
anyhow = "1"
async-channel = "2.3"
chrono = "0.4"
diesel = { version = "2.2", features = ["chrono", "sqlite"] }
diesel_migrations = "2.2"
formatx = "0.2"
fragile = "2"
futures-util = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = { version = "0.20", features = ["v2_84"] }
gstreamer-play = "0.23"
gtk = { package = "gtk4", version = "0.9", features = ["v4_18", "blueprint"] }
lazy_static = "1"
log = "0.4"
mpris-server = "0.8"
once_cell = "1"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.17"
tokio = { version = "1", features = ["rt", "fs"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
zip = "2.2"