[package]
name = "musicus_database"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = "1.4.0"
futures-channel = "0.3.5"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.23"
uuid = { version = "0.8", features = ["v4"] }
