[package]
name = "musicus_database"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
diesel_migrations = "1.4.0"
log = "0.4.14"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.23"
tokio = { version = "1.4.0", features = ["sync"] }
uuid = { version = "0.8", features = ["v4"] }
