[package]
name = "musicus_import"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
futures-channel = "0.3.5"
glib = { git = "https://github.com/gtk-rs/gtk-rs/", features = ["v2_64"] }
gstreamer = "0.16.5"
gstreamer-pbutils = "0.16.5"
log = "0.4.14"
once_cell = "1.5.2"
rand = "0.7.3"
thiserror = "1.0.23"
sha2 = "0.9.3"
