[package]
name = "musicus_import"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
glib = "0.14.0"
gstreamer = "0.17.0"
gstreamer-pbutils = "0.17.0"
log = "0.4.14"
once_cell = "1.5.2"
rand = "0.7.3"
thiserror = "1.0.23"
sha2 = "0.9.3"
tokio = { version = "1.4.0", features = ["sync"] }
