[package]
name = "musicus_import"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
glib = "0.15.11"
gstreamer = "0.18.8"
gstreamer-pbutils = "0.18.7"
log = "0.4.16"
once_cell = "1.10.0"
rand = "0.8.5"
thiserror = "1.0.31"
sha2 = "0.10.2"
tokio = { version = "1.18.0", features = ["sync"] }
