[package]
name = "musicus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.33"
adw = { package = "libadwaita", version = "0.1.1" }
async-trait = "0.1.42"
futures-channel = "0.3.5"
gdk = { package = "gdk4", version = "0.4.7" }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gio = "0.15.10"
glib = "0.15.10"
gstreamer = "0.18.7"
gtk = { package = "gtk4", version = "0.4.7" }
gtk-macros = "0.3.0"
log = "0.4.14"
musicus_backend = { version = "0.1.0", path = "../backend" }
once_cell = "1.5.2"
rand = "0.7.3"
sanitize-filename = "0.3.0"
