[package]
name = "musicus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
adw = { package = "libadwaita", version = "0.1.1" }
futures-channel = "0.3.21"
gdk = { package = "gdk4", version = "0.4.7" }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gio = "0.15.11"
glib = "0.15.11"
gstreamer = "0.18.8"
gtk = { package = "gtk4", version = "0.4.7" }
gtk-macros = "0.3.0"
log = "0.4.16"
musicus_backend = { version = "0.1.0", path = "../backend" }
once_cell = "1.10.0"
rand = "0.8.5"
sanitize-filename = "0.3.0"
