[package]
name = "musicus_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
fragile = "2"
gio = "0.16"
glib = "0.16"
gstreamer = "0.19"
gstreamer-player = "0.19"
log = { version = "0.4", features = ["std"] }
musicus_database = { version = "0.1.0", path = "../database" }
musicus_import = { version = "0.1.0", path = "../import" }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris-player = "0.6"
