[package]
name = "musicus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
adw = { package = "libadwaita", version = "0.2", features = ["v1_2"] }
futures-channel = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gio = "0.16"
glib = "0.16"
gstreamer = "0.19"
gtk = { package = "gtk4", version = "0.5" }
gtk-macros = "0.3"
log = "0.4"
musicus_backend = { version = "0.1.0", path = "../backend" }
once_cell = "1"
rand = "0.8"
sanitize-filename = "0.4"
