[package]
name = "musicus_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
fragile = "1.0.0"
futures-channel = "0.3.5"
gio = "0.9.1"
glib = "0.10.3"
gstreamer = "0.16.4"
gstreamer-player = "0.16.3"
log = "0.4.14"
mpris-player = "0.6.0"
musicus_client = { version = "0.1.0", path = "../musicus_client" }
musicus_database = { version = "0.1.0", path = "../musicus_database" }
secret-service = "2.0.1"
thiserror = "1.0.23"

